# KSC

./: .gitignore  CMakeLists.txt  README.md
.claude/: CLAUDE.md  settings.local.json
CMAKE/: SOURCES.cmake  TESTS.cmake
ITEMS/IN_PROGRESS/: ZoneView.md
KSC_DATA/: Game_State.json
KSC_DATA/BANNERS/START_SCREEN/: Start_Screen.json
KSC_DATA/GAME_STATE/: Game_State.json  Root_Scenes.json
KSC_DATA/GUI/: Bottom_Bar.json  Controls_View.json  Top_Bar.json
KSC_DATA/NOTES/: README.txt
KSC_DATA/NOTES/AVERY/: Avery_Note.md  README.txt
KSC_DATA/NOTES/AVERYS_LOGIN_HISTORY/: Averys_Login_History.json  Averys_Login_History_Summary.md
KSC_DATA/NOTES/AVERY_INFINITE_JEST/: Avery_Infinite_Jest_Summary.md
KSC_DATA/NOTES/AVERY_MACHINE_LANGUAGE/: Avery_Machine_Language.json  Avery_Machine_Language_Summary.md
SCRIPTS/: build_raylib.py  build_tests.py  convert_jpg_to_png.py  convert_raw_to_png.py  convert_to_png.py  refresh_default_game_state.py  resize_png.py  run_KSC.py  sync_KSC_with_desktop.py  sync_discovered.py  sync_to_sd.bat  sync_to_sd.py
SD/: Game_State.json
SD/BANNERS/START_SCREEN/: Start_Screen_Summary.md
SD/NOTES/AVERYS_LOGIN_HISTORY/: Averys_Login_History.json
SOURCE/ESP32/: ESP32FileOperator.h  ESP32FileParser.h  ESP32GraphicsRenderer.cpp  ESP32GraphicsRenderer.h  ESP32SceneRunner.h
SOURCE/ESP32/KSC/: KSC.ino
SOURCE/RAYLIB/: RaylibFileParser.h  RaylibGraphicsRenderer.cpp  RaylibGraphicsRenderer.h  RaylibSceneRunner.cpp  RaylibSceneRunner.h  main.cpp
SOURCE/SHARED/CLUES/: Clues.h
SOURCE/SHARED/CONTROLS_VIEW/: ControlsView.cpp  ControlsView.h
SOURCE/SHARED/FILE_OPERATOR/: FileOperator.h
SOURCE/SHARED/FILE_PARSER/: FileParser.h
SOURCE/SHARED/GAME_RUNNER/: GameRunner.cpp  GameRunner.h  GameStartManager.cpp  GameStartManager.h
SOURCE/SHARED/GAME_STATE/: GameState.h
SOURCE/SHARED/GRAPHICS_RENDERER/: GraphicsRenderer.h
TESTS/: test_AveryRootNavigation.cpp  test_GameRunner.cpp  test_GameStartManager.cpp  test_GameStateComparison.cpp  test_Location.cpp  test_Zone.cpp
TESTS/UTIL/: NullGraphicsRenderer.h  TestFileOperator.h
(+117 files in other folders)
